--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,11 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f7f7f7;
+    background-color: #333;
 }
 
 header {
-    background-color: #333;
+    background-color: #d16c0d;
     color: white;
     padding: 1em;
     text-align: center;
@@ -18,7 +18,7 @@ nav ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #d16c0d;
 }
 
 nav ul li {
@@ -37,7 +37,7 @@ main {
 }
 
 footer {
-    background-color: #333;
+    background-color: #d16c0d;
     color: white;
     text-align: center;
     padding: 10px;
